Implementacion de Cifrado de contraseñas en base de datos y navegador

--- a/assets/usuario/alta.css
+++ b/assets/usuario/alta.css
@@ -7,7 +7,7 @@
 
 section{
     display: flex;
-    background: #1c1c1c;
+    background: #ffffff;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
