--- a/assets/usuario/alta.css
+++ b/assets/usuario/alta.css
@@ -5,14 +5,20 @@
     font-family: 'Poppins', sans-serif;
 }
 
+header {
+    background-color: #1d3557;
+    color: #fff;
+    padding: 1px;
+    text-align: center;
+}
+
 section{
     display: flex;
     background: #ffffff;
     justify-content: center;
     align-items: center;
-    min-height: 80vh;
+    min-height: 100vh;
     width: 100%;
-    
 }
 
 .form-box{
