--- a/assets/Compra/consulta.css
+++ b/assets/Compra/consulta.css
@@ -39,7 +39,6 @@ footer {
     width: 100%;
 }
 
-/* Formulario */
 form {
 
     flex-wrap: wrap;
@@ -47,7 +46,10 @@ form {
     margin-bottom: 20px;
 }
 
-
+.nuevo-producto{
+    position: relative;
+    height: 60px;
+}
 
 input {
     padding: 5px;
@@ -64,7 +66,6 @@ input {
     cursor: pointer;
 }
 
-/* Lista de usuarios */
 table {
     width: 100%;
     border-collapse: collapse;
@@ -101,12 +102,11 @@ thead {
     color: #fff;
 }
 
-/* Otros estilos */
-/* Estilos para pantallas más pequeñas */
+
 @media (max-width: 768px) {
     table {
-        font-size: 14px; /* Ajustar el tamaño de fuente para una mejor legibilidad en dispositivos móviles */
-        width: auto; /* Permitir que la tabla ajuste su ancho automáticamente */
+        font-size: 14px;
+        width: auto; 
     }
 
     th, td {
