--- a/assets/producto/consulta.css
+++ b/assets/producto/consulta.css
@@ -1,46 +1,63 @@
+/* Estilos generales */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f5f5f5;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 header {
     background-color: #1d3557;
     color: #fff;
-    padding: 10px;
+    padding: 1px;
     text-align: center;
 }
 
 main {
-    max-width: 800px;
-    margin: 20px auto;
+    flex: 0; /* Permite que el contenido ocupe el espacio disponible restante */
+    max-width: 1200px;
+    margin: 40px auto;
     padding: 20px;
     background-color: #fff;
-    border: 1px solid #ccc;
+    border: 1px solid #ccc; 
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-form {
-    margin-bottom: 20px;
+footer {
+    text-align: center;
+    margin: -18px 0px;
     padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    background-color: #1d3557;
+    color: #fff;
+    position: fixed; /* Mantiene el footer fijo en la parte inferior de la pantalla */
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
 
-label, input, button {
-    margin-bottom: 10px;
+form {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
 
-input[type="text"] {
-    padding: 8px;
+.nuevo-producto{
+    position: relative;
+    height: 60px;
+}
+
+input {
+    padding: 5px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
-button {
-    padding: 8px 15px;
+.rounded-button {
+    padding: 6px 15px;
     background-color: #1d3557;
     color: #fff;
     border: none;
@@ -51,6 +68,7 @@ button {
 table {
     width: 100%;
     border-collapse: collapse;
+    margin-top: 15px;
 }
 
 th, td {
@@ -61,21 +79,58 @@ th, td {
 
 thead {
     background-color: #f1faee;
+    text-align: center;
 }
 
-.edit-btn, .delete-btn {
-    padding: 6px 12px;
+
+.edit-btn {
+    padding: 7px 12px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-}
-
-.edit-btn {
     background-color: #007bff;
     color: #fff;
 }
 
 .delete-btn {
+    padding: 7px 12px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
     background-color: #dc3545;
     color: #fff;
+}
+
+@media (max-width: 768px) {
+    table {
+        font-size: 14px;
+        width: auto; 
+    }
+
+    th, td {
+        padding: 5px;
+    }
+
+    .edit-btn, .delete-btn {
+        padding: 2px 8px;
+        font-size: 12px;
+    }
+
+    #userList {
+        overflow-x: auto; 
+    }
+}
+
+.edit-btn, .delete-btn {
+    text-decoration: none; 
+}
+
+.edit-btn:hover{
+    text-decoration: none; 
+    background-color: #00FFEC ; 
+}
+    .delete-btn:hover {
+    text-decoration: none; 
+    background-color: black;
+    color: #fff; 
 }
