--- a/assets/Venta/Factura.css
+++ b/assets/Venta/Factura.css
@@ -94,3 +94,64 @@ button[type="Guardar"] {
     font-size: 25px;
     font-weight: bold;
 }
+
+.row {
+    display: flex;
+}
+
+.col2 {
+    flex: 0.4;
+    padding: 10px;
+    margin-left: 30%;
+   
+}
+
+.col1 {
+    flex: 0.4;
+    padding: 10px;
+    margin-left: 10%;
+   
+}
+#icon-select{
+    position: absolute;
+    color: #000000;
+    right: 8px;
+    font-size: 1.2em;
+}
+
+
+select {
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    -ms-appearance:none;
+    appearance:none;
+    width: 230px;
+    outline:0;
+    background: #5c6664;
+    background-image: none;
+    padding: 5px 12px;
+    color:#fff;
+    cursor:pointer;
+    font-size: 1em;
+    font-family: 'Open Sans', sans-serif;
+    border-radius: 5px;
+}
+
+
+.rol-select{
+    position: relative;
+    margin: 30px 0;
+    width: 310px;
+    
+}
+
+.rol-select .row-select {
+    width: 50px;
+    height: 100%;
+    position: absolute;
+    right: 75px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+}
